--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
+    "dayjs": "^1.8.14",
     "lodash": "^4.17.11",
     "ramda": "^0.26.1",
     "sass-rem": "^2.0.1",
+    "universal-cookie": "^4.0.0",
     "v-click-outside": "^2.1.1",
+    "v-tooltip": "^2.0.2",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
     "vue-axios": "^2.1.4",
